# civil-command-center

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  benchmark.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: __init__.py  emails.py
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
server/: __init__.py  app.py  environment.py  memory.py  requirements.txt
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_environment.py
