[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civil-command-center"
version = "1.0.0"
description = "Civil Command Center: AI Civilization Leader Training Environment for OpenEnv"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bedanta Chatterjee", email = "rupac4530@gmail.com"},
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
]

[project.scripts]
server = "server.app:run_server"

[tool.setuptools.packages.find]
include = ["*"]
